src/style.css
/* ... */
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
font-family: Minecraftia;
  overflow: hidden;
}

.info {
  position: absolute;
  right: 20px;
  padding-inline: 10px;
  bottom: 0;
  color: white;
  font-size: 16px;
}

.crosshair {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  color: white;
  pointer-events: none;
  user-select: none;
  z-index: 9999;
}


#toolbar-container {
  position: fixed;
  bottom: 8px;
  width: 100%;

  display: flex;
  justify-content: center;
}

#toolbar {
  background-color: rgba(109, 109, 109, 0.557);
  border: 4px solid rgb(147, 147, 147);
  padding: 8px;
  display: flex;
  justify-content: space-between;
  column-gap: 12px;
}

.toolbar-icon {
  width: 64px;
  height: 64px;
  outline: 4px solid rgb(58, 58, 58);;
}

.toolbar-icon.selected {
  outline: 4px solid white;
}

.notification{
  position: fixed;
  bottom: 10px;
  left: 10px;
  color: white;
  font-size: 2rem;
}

.startGame{
  position: absolute;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  background: url("../public/bg.png");
}


.startGame div{
  display: flex;
  justify-content: center;
  align-items: center; flex-direction: column;
  background: #00000098;
  padding:30px 40px ;
  border: 2px solid black;
  border-radius: 50px;
}

